--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,30 +3,37 @@ name: Build and Deploy Jekyll Site
 on:
   push:
     branches:
-      - main
+      - main  # Trigger this workflow when changes are pushed to the main branch
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Step 2: Set up Ruby environment
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1
-          bundler-cache: true
+          ruby-version: 3.1  # Specify Ruby version
+          bundler-cache: true  # Enable bundler caching for faster builds
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: bundle install
 
+      # Step 4: Build the Jekyll site
       - name: Build site
         run: bundle exec jekyll build --source ./ --destination ./_site
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./_site
+      # Step 5: Push the built site to the main branch
+      - name: Deploy to main branch
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "Deploy built site to main branch"
+          git push origin main
